--- a/go/mad-day.html
+++ b/go/mad-day.html
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/sausage-flip.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/sausage-flip.png">
+                            <img src="https://sudoku-online.github.io/img/sausage-flip.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/tiny-fishing.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/tiny-fishing.png">
+                            <img src="https://sudoku-online.github.io/img/tiny-fishing.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/swingo.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/swingo.png">
+                            <img src="https://sudoku-online.github.io/img/swingo.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/short-ride.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/short-ride.png">
+                            <img src="https://sudoku-online.github.io/img/short-ride.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/moto-x3m-spooky-land.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/moto-x3m-spooky-land.png">
+                            <img src="https://sudoku-online.github.io/img/moto-x3m-spooky-land.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/eugenes-life.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/eugenes-life.png">
+                            <img src="https://sudoku-online.github.io/img/eugenes-life.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/riddle-school.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/riddle-school.png">
+                            <img src="https://sudoku-online.github.io/img/riddle-school.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stick-defenders.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stick-defenders.png">
+                            <img src="https://sudoku-online.github.io/img/stick-defenders.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/bike-trials-winter-1.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/bike-trials-winter-1.png">
+                            <img src="https://sudoku-online.github.io/img/bike-trials-winter-1.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/12-minibattles.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/12-minibattles.png">
+                            <img src="https://sudoku-online.github.io/img/12-minibattles.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/five-nights-at-freddys.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/five-nights-at-freddys.png">
+                            <img src="https://sudoku-online.github.io/img/five-nights-at-freddys.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/2048-cupcakes.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/2048-cupcakes.png">
+                            <img src="https://sudoku-online.github.io/img/2048-cupcakes.png">
                             <div class="product-badge">       
                             </div>
                         </div>
